kubernetes/services/speedtest.yml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: speedtest

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: default
spec:
  tls:
    - hosts:
        - speedtest.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: speedtest.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: default
  labels:
    app: speedtest
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      affinity:
        nodeAffinity:
          # Only on public nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: public
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/speedtest-tracker:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 1Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 80
